--- a/djangoProject/templates/upload.html
+++ b/djangoProject/templates/upload.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,73 +13,109 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <style>
+        body {
+            padding-top: 70px;
+        }
+
+        .nav-link {
+            cursor: pointer;
+        }
+
+        .tab-pane {
+            padding: 20px;
+        }
+    </style>
 </head>
+
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#">Face Recognition Website</a>
+    </nav>
+
     <div class="container">
-        <h1 class="mt-5">Face Recognition Website</h1>
-        <!-- Navigation -->
         <ul class="nav nav-tabs mt-3">
             <li class="nav-item">
-                <a class="nav-link active" id="faceRecognitionTab" data-toggle="tab" href="#faceRecognition">Face Recognition</a>
+                <a class="nav-link active" data-toggle="tab" href="#faceRecognition">Face Recognition</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="faceSearchTab" data-toggle="tab" href="#faceSearch">Face Search</a>
+                <a class="nav-link" data-toggle="tab" href="#faceSearch">Face Search</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="faceAnalyseTab" data-toggle="tab" href="#faceAnalyse">Face Analyse</a>
+                <a class="nav-link" data-toggle="tab" href="#faceAnalyse">Face Analyse</a>
             </li>
-            <!-- Add more tabs for other functionalities -->
         </ul>
-        <!-- Tab Content -->
-        <div class="tab-content mt-3">
-            <!-- Face Recognition Tab -->
+
+        <div class="tab-content">
             <div id="faceRecognition" class="tab-pane fade show active">
-                <!-- Sample Image and Form for Face Recognition -->
-                <h3 class="mt-3">Face Recognition</h3>
+                <h3>Face Recognition</h3>
                 <div class="row">
                     <div class="col-md-6">
-                        <h5>Sample Image:</h5>
-                        <img src="{% static 'img.png' %}?v={{ timestamp }}" class="img-fluid rounded mb-3" alt="Sample Face 1">
-                        <img src="{% static 'img_1.png' %}?v={{ timestamp }}" class="img-fluid rounded" alt="Sample Face 2">
+                        <h5>Sample Images:</h5>
+                        <img src="{% static 'img.png' %}?v={{ timestamp }}" class="img-fluid rounded mb-3"
+                            alt="Sample Face 1">
+                        <img src="{% static 'img_1.png' %}?v={{ timestamp }}" class="img-fluid rounded"
+                            alt="Sample Face 2">
                     </div>
                     <div class="col-md-6">
                         <h5>Upload Images:</h5>
                         <form id="faceRecognitionForm" enctype="multipart/form-data">
                             {% csrf_token %}
-                            <input type="file" name="image1" class="form-control mb-2" accept="image/*" required>
-                            <input type="file" name="image2" class="form-control mb-2" accept="image/*" required>
+                            <div class="form-group">
+                                <input type="file" name="image1" class="form-control-file" accept="image/*" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="file" name="image2" class="form-control-file" accept="image/*" required>
+                            </div>
                             <button type="submit" class="btn btn-primary">Upload</button>
                         </form>
                     </div>
                 </div>
             </div>
-            <!-- Face Search Tab -->
-            <div id="faceSearch" class="tab-pane fade show active">
-                <!-- Face Search Tab Content -->
-                <h3 class="mt-3">Face Search</h3>
+
+            <div id="faceSearch" class="tab-pane fade">
+                <h3>Face Search</h3>
                 <form id="faceSearchForm" enctype="multipart/form-data">
                     {% csrf_token %}
-                    <input type="file" name="image" class="form-control mb-2" accept="image/*" required>
+                    <div class="form-group">
+                        <input type="file" name="image" class="form-control-file" accept="image/*" required>
+                    </div>
                     <button type="submit" class="btn btn-primary">Search Faces</button>
                 </form>
             </div>
-            <div id="faceAnalyse" class="tab-pane fade show active">
-                <h3 class="mt-3">Face Analyse</h3>
+
+            <div id="faceAnalyse" class="tab-pane fade">
+                <h3>Face Analyse</h3>
                 <form id="faceAnalyseForm" enctype="multipart/form-data">
                     {% csrf_token %}
-                    <input type="file" name="image" class="form-control mb-2" accept="image/*" required>
+                    <div class="form-group">
+                        <input type="file" name="image" class="form-control-file" accept="image/*" required>
+                    </div>
                     <button type="submit" class="btn btn-primary">Analyse Faces</button>
                 </form>
             </div>
-            <!-- Add more tab content for other functionalities -->
         </div>
     </div>
 
-    <!-- JavaScript for handling image upload and result display -->
+    <!-- Modals -->
+    <div class="modal fade" id="resultModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title"></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body"></div>
+            </div>
+        </div>
+    </div>
+
     <script>
-        $(document).ready(function() {
-            // Submit form for face recognition
-            $('#faceRecognitionForm').submit(function(event) {
+        $(document).ready(function () {
+            // Face Recognition
+            $('#faceRecognitionForm').submit(function (event) {
                 event.preventDefault();
                 var formData = new FormData($(this)[0]);
                 $.ajax({
@@ -87,25 +124,20 @@
                     data: formData,
                     contentType: false,
                     processData: false,
-                    success: function(response) {
-                        // 构建模态框内容
-                        var resultMessage = '';
-                        if (response.verified === true) {
-                            resultMessage = 'Same person';
-                        } else {
-                            resultMessage = 'Not the same person. Similarity metric: ' + response.similarity_metric;
-                        }
-
-                        $('#faceRecognitionResultModal .modal-body').text(resultMessage);
-                        $('#faceRecognitionResultModal').modal('show');
+                    success: function (response) {
+                        var resultMessage = response.verified ? 'Same person' : 'Not the same person. Similarity metric: ' + response.similarity_metric;
+                        $('#resultModal .modal-title').text('Face Recognition Result');
+                        $('#resultModal .modal-body').text(resultMessage);
+                        $('#resultModal').modal('show');
                     },
-                    error: function(xhr, status, error) {
+                    error: function (xhr, status, error) {
                         console.error(xhr.responseText);
                     }
                 });
             });
-            // Add similar JavaScript for other functionalities
-            $('#faceSearchForm').submit(function(event) {
+
+            // Face Search
+            $('#faceSearchForm').submit(function (event) {
                 event.preventDefault();
                 var formData = new FormData($(this)[0]);
                 $.ajax({
@@ -114,24 +146,20 @@
                     data: formData,
                     contentType: false,
                     processData: false,
-                    success: function(response) {
-
-                        var resultMessage = '';
-
-                        resultMessage = ''+ response['face_num']+' faces is found';
-
-
-                        $('#faceSearchResultModal .modal-body').text(resultMessage);
-                        $('#faceSearchResultModal').modal('show');
+                    success: function (response) {
+                        var resultMessage = response['face_num'] + ' faces is found';
+                        $('#resultModal .modal-title').text('Face Search Result');
+                        $('#resultModal .modal-body').text(resultMessage);
+                        $('#resultModal').modal('show');
                     },
-                        // 处理和显示检测到的人脸
-
-                    error: function(xhr, status, error) {
+                    error: function (xhr, status, error) {
                         console.error(xhr.responseText);
                     }
                 });
             });
-            $('#faceAnalyseForm').submit(function(event) {
+
+            // Face Analyse
+            $('#faceAnalyseForm').submit(function (event) {
                 event.preventDefault();
                 var formData = new FormData($(this)[0]);
                 $.ajax({
@@ -140,73 +168,19 @@
                     data: formData,
                     contentType: false,
                     processData: false,
-                    success: function(response) {
-
-                        var resultMessage = '';
-
-                        resultMessage = 'age : '+ response['age']+'\ngender : '+response['gender']+'\nemotion : '+response['emotion']+'\nrace : '+response['race'];
-
-
-                        $('#faceAnalyseResultModal .modal-body').text(resultMessage);
-                        $('#faceAnalyseResultModal').modal('show');
+                    success: function (response) {
+                        var resultMessage = 'Age: ' + response['age'] + '\nGender: ' + response['gender'] + '\nEmotion: ' + response['emotion'] + '\nRace: ' + response['race'];
+                        $('#resultModal .modal-title').text('Face Analyse Result');
+                        $('#resultModal .modal-body').text(resultMessage);
+                        $('#resultModal').modal('show');
                     },
-                        // 处理和显示检测到的人脸
-
-                    error: function(xhr, status, error) {
+                    error: function (xhr, status, error) {
                         console.error(xhr.responseText);
                     }
                 });
             });
         });
-
     </script>
-
-    <!-- Modal for displaying result -->
-    <div class="modal fade" id="faceRecognitionResultModal" tabindex="-1" role="dialog" aria-labelledby="faceRecognitionResultModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="faceRecognitionResultModalLabel">Face Recognition Result</h5>
-                    <abutton type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </abutton>
-                </div>
-                <div class="modal-body">
-                    <!-- Result will be displayed here -->
-                </div>
-            </div>
-        </div>
-    </div>
-
-     <div class="modal fade" id="faceSearchResultModal" tabindex="-1" role="dialog" aria-labelledby="faceSearchResultModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="faceSearchResultModalLabel">Face Recognition Result</h5>
-                    <abutton type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </abutton>
-                </div>
-                <div class="modal-body">
-                    <!-- Result will be displayed here -->
-                </div>
-            </div>
-        </div>
-    </div>
-     <div class="modal fade" id="faceAnalyseResultModal" tabindex="-1" role="dialog" aria-labelledby="faceAnalyseResultModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="faceAnalyseResultModalLabel">Face Analyse Result</h5>
-                    <abutton type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </abutton>
-                </div>
-                <div class="modal-body">
-                    <!-- Result will be displayed here -->
-                </div>
-            </div>
-        </div>
-    </div>
 </body>
+
 </html>
